--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -23,7 +23,6 @@ $navbar-logo-width: 100% !default;
   }
 
   .navbar-nav {
-    
     .nav-link {
       outline: none;
       align-items: center;
@@ -36,7 +35,7 @@ $navbar-logo-width: 100% !default;
       &:before {
         background-color: $header-icon-border-color-hover;
         border-radius: 0 0 4px 4px;
-        content: "";
+        content: '';
         display: block;
         height: 0.25rem;
         left: 50%;
@@ -132,20 +131,24 @@ $navbar-logo-width: 100% !default;
     width: 100%;
     z-index: 1;
 
-    &[placeholder]{
+    &[placeholder] {
       text-overflow: ellipsis !important;
     }
-    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        text-overflow: ellipsis  !important;
+    &::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      text-overflow: ellipsis !important;
     }
-    &::-moz-placeholder { /* Firefox 19+ */
-        text-overflow: ellipsis  !important;
+    &::-moz-placeholder {
+      /* Firefox 19+ */
+      text-overflow: ellipsis !important;
     }
-    &:-ms-input-placeholder { /* IE 10+ */
-        text-overflow: ellipsis  !important;
+    &:-ms-input-placeholder {
+      /* IE 10+ */
+      text-overflow: ellipsis !important;
     }
-    &:-moz-placeholder { /* Firefox 18- */
-        text-overflow: ellipsis  !important;
+    &:-moz-placeholder {
+      /* Firefox 18- */
+      text-overflow: ellipsis !important;
     }
 
     &:focus {
@@ -222,7 +225,6 @@ $navbar-logo-width: 100% !default;
     form {
       flex-grow: 1;
     }
-
   }
   .input-group {
     width: 100%;
@@ -238,12 +240,16 @@ $navbar-logo-width: 100% !default;
   display: inline-flex;
   .navbar-logo {
     max-width: 100%;
+    height: 50px;
+    width: 106px;
   }
 }
 
 .navbar-logo {
   max-height: $navbar-logo-height;
   width: $navbar-logo-width;
+  height: 50px;
+  width: 106px;
 }
 
 .logo-text {
@@ -270,7 +276,7 @@ $navbar-logo-width: 100% !default;
 }
 
 .add-border {
-  border: 1px solid transparentize($white, 0.30);
+  border: 1px solid transparentize($white, 0.3);
 }
 
 .navbar-collapse {
@@ -282,7 +288,8 @@ $navbar-logo-width: 100% !default;
   }
 }
 
-.navbar-container, .navbar-primary {
+.navbar-container,
+.navbar-primary {
   @media (min-width: 992px) {
     padding-right: 0;
   }
