--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -148,7 +148,7 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
 
     &.gas-price-oracle {
       &::before {
-        background-color: $dashboard-line-color-price;
+        background-color: #fff;
       }
     }
 
