--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -166,7 +166,7 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
   }
 
   .dashboard-banner-chart-legend-label {
-    color: $dashboard-banner-chart-legend-label-color;
+    color: #fff;
     display: block;
     font-size: 12px;
     font-weight: 600;
